...
    "hero_detail_search" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Search by name"
          }
        },
        "es" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Buscar por nombre"
...
    "hero_detail_section_enemies" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Enemies"
          }
        },
        "es" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Enemigos"
...
