...
                    Button(action: {
                        searchText = ""
                        Task {
                            await viewModel.process(.tapClearResults)
                        }
                    }, label: {
                        Image(systemName: "xmark.circle.fill")
                            .foregroundColor(.wmMain)
                            .accessibilityHidden(true)
                    })
                    .accessibilityHint(String(localized: String.LocalizationValue(WMString.searchHeroesAccClear)))
                }
            }
...
